--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,9 @@
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
-    "sourceMap": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
     "removeComments": true,
-    "noImplicitAny": false
-  },
-  "files": [
-    "src/index.ts"
-  ]
+    "stripInternal":true,
+    "rootDir":"src",
+    "importHelpers":false
+  }
 }
