--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "some-sql",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "ts-loader": "^0.8.2",
     "tslint": "^4.2.0",
     "tslint-loader": "^3.3.0",
+    "typedoc": "^0.5.3",
     "typescript": "^2.1.4",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1",
