--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,9 @@
     "stripInternal":true,
     "removeComments":true,
     "importHelpers":false
-  }
+  },
+  "exclude":[
+    "examples",
+    "node_modules"
+  ]
 }
