--- a/examples/react-todo/package.json
+++ b/examples/react-todo/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "some-sql": "^0.1.5",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "some-sql": "git+https://github.com/ClickSimply/Some-SQL.git"
   },
   "devDependencies": {
     "@types/react": "^0.14.55",
