--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "some-sql",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "",
   "main": "node/index.js",
   "scripts": {
@@ -12,10 +12,9 @@
     "type": "git",
     "url": "https://github.com/ClickSimply/Some-SQL.git"
   },
-  "typescript": {
-    "definition": "node/index.d.ts"
-  },
+  "typings":"node/inded.d.ts",
   "devDependencies": {
+    "@types/react-dom": "^0.14.22",
     "ts-loader": "^0.8.2",
     "ts-node": "^2.0.0",
     "tslib": "^1.4.0",
