--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "some-sql",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "description": "",
   "main": "node/index.js",
   "scripts": {
@@ -20,7 +20,7 @@
     "tslib": "^1.4.0",
     "tslint": "^4.2.0",
     "typedoc": "^0.5.3",
-    "typescript": "^2.1.4",
+    "typescript": "2.2.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
     "write-file-webpack-plugin": "^3.4.2"
