--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "some-sql",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "",
   "main": "node/index.js",
   "scripts": {
     "serve": "bash bin/serve.sh",
     "build": "bash bin/build.sh",
-    "test": "ts-node bin/test.ts"
+    "test": "mocha -r ts-node/register src/tests/*.ts"
   },
   "repository": {
     "type": "git",
@@ -14,8 +14,12 @@
   },
   "typings": "node/index.d.ts",
   "devDependencies": {
+    "@types/chai": "^3.4.35",
+    "@types/mocha": "^2.2.39",
+    "chia": "0.0.1",
+    "mocha": "^3.2.0",
     "ts-loader": "^2.0.0",
-    "ts-node": "^2.0.0",
+    "ts-node": "^2.1.0",
     "tslib": "^1.4.0",
     "tslint": "^4.2.0",
     "typedoc": "^0.5.7",
