--- a/examples/react-draw/tsconfig.json
+++ b/examples/react-draw/tsconfig.json
@@ -6,7 +6,7 @@
     "stripInternal":true,
     "removeComments":true,
     "jsx":"react",
-    "outFile":"index.js"
+    "outFile":"./index.js"
   },
   "files":[
       "./src/index.tsx"
