--- a/package.json
+++ b/package.json
@@ -1,70 +1,69 @@
 {
-  "name": "some-sql",
-  "version": "0.3.4",
-  "description": "",
-  "main": "node/index.js",
-  "scripts": {
-    "serve": "bash bin/serve.sh",
-    "build": "bash bin/build.sh",
-    "test": "mocha -r ts-node/register tests/*.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ClickSimply/Some-SQL.git"
-  },
-  "typings": "node/index.d.ts",
-  "devDependencies": {
-    "@types/chai": "^3.4.35",
-    "@types/mocha": "^2.2.39",
-    "chia": "0.0.1",
-    "mocha": "^3.2.0",
-    "ts-loader": "^2.0.0",
-    "ts-node": "^2.1.0",
-    "tslib": "^1.4.0",
-    "tslint": "^4.2.0",
-    "typedoc": "^0.5.7",
-    "typescript": "2.2.0",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0",
-    "write-file-webpack-plugin": "^3.4.2"
-  },
-  "keywords": [
-    "database",
-    "browser",
-    "json",
-    "collection",
-    "records",
-    "node",
-    "nodejs",
-    "sql",
-    "nosql",
-    "DBMS",
-    "data",
-    "query",
-    "localStorage",
-    "IndexedDB",
-    "DOM-storage",
-    "SQLite",
-    "JSON",
-    "CSV",
-    "iteration",
-    "sequence",
-    "stateless",
-    "functional",
-    "datastructure",
-    "data",
-    "lazy",
-    "persistent",
-    "immutable",
-    "undo",
-    "redo",
-    "immutablejs",
-    "redux"
-  ],
-  "author": "Scott Lott <Scott@ClickSimply.com>",
-  "license": "MIT",
-  "dependencies": {
-    "es6-promise": "git+https://github.com/ClickSimply/es6-promise.git",
-    "immediate": "^3.2.3"
-  }
+    "name": "nano-sql",
+    "version": "0.4.0",
+    "description": "",
+    "main": "node/index.js",
+    "scripts": {
+        "serve": "bash bin/serve.sh",
+        "build": "bash bin/build.sh",
+        "test": "mocha -r ts-node/register tests/*.ts"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ClickSimply/Nano-SQL.git"
+    },
+    "typings": "node/index.d.ts",
+    "devDependencies": {
+        "@types/chai": "^3.4.35",
+        "@types/mocha": "^2.2.39",
+        "chia": "0.0.1",
+        "mocha": "^3.2.0",
+        "ts-loader": "^2.0.0",
+        "ts-node": "^2.1.0",
+        "tslib": "^1.4.0",
+        "tslint": "^4.2.0",
+        "typedoc": "^0.5.7",
+        "typescript": "2.2.0",
+        "webpack": "^2.2.1",
+        "webpack-dev-server": "^2.3.0",
+        "write-file-webpack-plugin": "^3.4.2"
+    },
+    "keywords": [
+        "database",
+        "browser",
+        "json",
+        "collection",
+        "records",
+        "node",
+        "nodejs",
+        "sql",
+        "nosql",
+        "DBMS",
+        "data",
+        "query",
+        "localStorage",
+        "IndexedDB",
+        "DOM-storage",
+        "SQLite",
+        "JSON",
+        "CSV",
+        "iteration",
+        "sequence",
+        "stateless",
+        "functional",
+        "datastructure",
+        "data",
+        "lazy",
+        "persistent",
+        "immutable",
+        "undo",
+        "redo",
+        "immutablejs",
+        "redux",
+        "somesql",
+        "nanosql"
+    ],
+    "author": "Scott Lott <Scott@ClickSimply.com>",
+    "license": "MIT",
+    "dependencies": {}
 }
