nodejs build attempt 2...

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "nano-sql",
     "version": "0.6.1",
     "description": "",
-    "main": "node/index.js",
-    "browser": "node/db-index.js",
+    "main": "node/index-server.js",
+    "browser": "node/index.js",
     "scripts": {
         "serve": "bash bin/serve.sh",
         "build": "bash bin/build.sh",
