--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nano-sql",
-    "version": "0.7.4",
+    "version": "0.7.5",
     "description": "",
     "main": "node/index-server.js",
     "browser": "node/index.js",
@@ -76,6 +76,8 @@
     "dependencies": {
         "leveldown": "^1.6.0",
         "levelup": "^1.3.5",
-        "lie-ts": "^3.1.6"
+        "lie-ts": "^3.1.6",
+        "setimmediate": "^1.0.5",
+        "trie-prefix-tree": "^1.3.0"
     }
 }
