--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nano-sql",
-    "version": "0.7.61",
+    "version": "0.7.7",
     "description": "",
     "main": "node/index-server.js",
     "browser": "node/index.js",
@@ -69,15 +69,15 @@
         "level DB",
         "Indexed DB",
         "isomorphic",
-        "universal"
+        "universal",
+        "trie",
+        "tree"
     ],
     "author": "Scott Lott <Scott@ClickSimply.com>",
     "license": "MIT",
     "dependencies": {
         "leveldown": "^1.6.0",
         "levelup": "^1.3.5",
-        "lie-ts": "^3.1.6",
-        "setimmediate": "^1.0.5",
-        "trie-prefix-tree": "^1.3.0"
+        "lie-ts": "^3.1.6"
     }
 }
