--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nano-sql",
-    "version": "0.7.75",
+    "version": "0.7.8",
     "description": "",
     "main": "node/index-server.js",
     "browser": "node/index.js",
@@ -66,6 +66,8 @@
         "somesql",
         "nanosql",
         "levelDB",
+        "leveldb",
+        "indexeddb",
         "level DB",
         "Indexed DB",
         "isomorphic",
@@ -78,6 +80,7 @@
     "dependencies": {
         "leveldown": "^1.6.0",
         "levelup": "^1.3.5",
-        "lie-ts": "^3.1.6"
+        "lie-ts": "^3.1.6",
+        "setimmediate": "^1.0.5"
     }
 }
