--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nano-sql",
-    "version": "0.7.8",
+    "version": "0.7.9",
     "description": "",
     "main": "node/index-server.js",
     "browser": "node/index.js",
@@ -81,6 +81,6 @@
         "leveldown": "^1.6.0",
         "levelup": "^1.3.5",
         "lie-ts": "^3.1.6",
-        "setimmediate": "^1.0.5"
+        "prefix-trie-ts": "0.0.1"
     }
 }
