--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "nano-sql",
-    "version": "0.8.01",
+    "version": "0.8.2",
     "description": "",
     "main": "node/index-server.js",
     "browser": "node/index.js",
     "scripts": {
         "serve": "bash bin/serve.sh",
         "build": "bash bin/build.sh",
-        "test": "mocha -r ts-node/register tests/*.ts"
+        "test": "mocha -r ts-node/register tests/index.ts"
     },
     "repository": {
         "type": "git",
@@ -20,8 +20,11 @@
         "@types/mocha": "^2.2.39",
         "@types/node": "^7.0.8",
         "@types/websql": "0.0.27",
+        "chai": "^3.5.0",
         "chia": "0.0.1",
+        "colors": "^1.1.2",
         "mocha": "^3.2.0",
+        "mocha-testdata": "^1.2.0",
         "ts-loader": "^2.0.0",
         "ts-node": "^3.0.2",
         "tslib": "^1.4.0",
