--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "nano-sql",
     "version": "0.8.6",
-    "description": "",
+    "description": "The most powerful little databse.",
     "main": "node/index-server.js",
     "browser": "node/index.js",
     "scripts": {
