--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nano-sql",
-    "version": "0.8.83",
+    "version": "0.8.9",
     "description": "The most powerful little databse.",
     "main": "node/index-server.js",
     "browser": "node/index.js",
@@ -86,5 +86,24 @@
         "levelup": "^1.3.5",
         "lie-ts": "^3.1.6",
         "prefix-trie-ts": "0.0.1"
-    }
+    },
+    "contributors": [{
+            "name": "Vikrant Pogula",
+            "email": null,
+            "url": "https://github.com/vikrantpogula",
+            "contributions": 3,
+            "additions": 1681,
+            "deletions": 1355,
+            "hireable": null
+        },
+        {
+            "name": "Scott Lott",
+            "email": null,
+            "url": "https://github.com/ClickSimply",
+            "contributions": 178,
+            "additions": 170884,
+            "deletions": 95451,
+            "hireable": false
+        }
+    ]
 }
