--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nano-sql",
-    "version": "0.9.0",
+    "version": "0.9.1",
     "description": "The most powerful little databse.",
     "main": "node/index-server.js",
     "browser": "node/index.js",
@@ -15,24 +15,24 @@
     },
     "typings": "node/index.d.ts",
     "devDependencies": {
-        "@types/chai": "^3.4.35",
-        "@types/levelup": "0.0.29",
-        "@types/mocha": "^2.2.39",
-        "@types/node": "^7.0.8",
+        "@types/chai": "^4.0.1",
+        "@types/levelup": "0.0.30",
+        "@types/mocha": "^2.2.41",
+        "@types/node": "^8.0.9",
         "@types/websql": "0.0.27",
-        "chai": "^3.5.0",
+        "chai": "^4.0.2",
         "chia": "0.0.1",
         "colors": "^1.1.2",
-        "mocha": "^3.2.0",
+        "mocha": "^3.4.2",
         "mocha-testdata": "^1.2.0",
-        "ts-loader": "^2.0.0",
-        "ts-node": "^3.0.2",
-        "tslib": "^1.4.0",
-        "tslint": "^5.0.0",
-        "typedoc": "^0.5.7",
-        "typescript": "2.2.2",
-        "webpack": "^2.2.1",
-        "webpack-strip-block": "^0.1.0"
+        "ts-loader": "^2.2.2",
+        "ts-node": "^3.2.0",
+        "tslib": "^1.7.1",
+        "tslint": "^5.5.0",
+        "typedoc": "^0.7.1",
+        "typescript": "2.4.1",
+        "webpack": "^3.1.0",
+        "webpack-strip-block": "^0.2.0"
     },
     "keywords": [
         "database",
@@ -82,14 +82,15 @@
     "author": "Scott Lott <Scott@ClickSimply.com>",
     "license": "MIT",
     "dependencies": {
-        "leveldown": "^1.6.0",
-        "levelup": "^1.3.5",
+        "leveldown": "^1.7.2",
+        "levelup": "^1.3.8",
         "lie-ts": "^3.3.0",
-        "prefix-trie-ts": "0.0.1",
-        "prepack": "^0.2.3",
+        "prefix-trie-ts": "0.0.2",
+        "prepack": "^0.2.4",
         "prepack-webpack-plugin": "^1.1.0"
     },
-    "contributors": [{
+    "contributors": [
+        {
             "name": "Vikrant Pogula",
             "email": null,
             "url": "https://github.com/vikrantpogula",
