--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nano-sql",
-  "version": "1.1.3",
-  "description": "The most powerful little databse.",
+  "version": "1.1.4",
+  "description": "Super flexible database/datastore for the client, server & mobile devices.",
   "main": "lib/index-server.js",
   "browser": "lib/index.js",
   "scripts": {
