--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nano-sql",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Super flexible database/datastore for the client, server & mobile devices.",
   "main": "lib/index-server.js",
   "browser": "lib/index.js",
@@ -93,11 +93,13 @@
   "author": "Scott Lott <Scott@ClickSimply.com>",
   "license": "MIT",
   "dependencies": {
+    "broquire": "^1.0.0",
     "express": "^4.16.2",
     "int64-buffer": "^0.1.10",
     "leveldown": "^2.1.1",
     "levelup": "^2.0.1",
     "lie-ts": "^3.7.0",
+    "node-typescript-compiler": "^1.1.1",
     "prefix-trie-ts": "0.0.3",
     "prepack": "^0.2.17",
     "prepack-webpack-plugin": "^1.1.0",
