--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nano-sql",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "Super flexible database/datastore for the client, server & mobile devices.",
   "main": "lib/index-server.js",
   "browser": "lib/index.js",
@@ -30,6 +30,7 @@
     "mocha": "^4.1.0",
     "mocha-testdata": "^1.2.0",
     "npm-run-all": "^4.1.2",
+    "raw-loader": "^0.5.1",
     "ts-loader": "^3.2.0",
     "ts-node": "^4.1.0",
     "tslib": "^1.8.1",
@@ -39,8 +40,7 @@
     "uglify-loader": "^2.0.0",
     "webpack": "^3.10.0",
     "webpack-node-externals": "^1.6.0",
-    "webpack-strip-block": "^0.2.0",
-    "raw-loader": "^0.5.1"
+    "webpack-strip-block": "^0.2.0"
   },
   "keywords": [
     "database",
@@ -94,6 +94,7 @@
   "author": "Scott Lott <Scott@ClickSimply.com>",
   "license": "MIT",
   "dependencies": {
+    "babel": "^6.23.0",
     "int64-buffer": "^0.1.10",
     "leveldown": "^2.1.1",
     "levelup": "^2.0.1",
