--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@types/websql": "0.0.27",
     "chai": "^4.1.2",
     "chia": "0.0.1",
-    "colors": "^1.1.2",
+    "esdoc": "^1.0.4",
+    "esdoc-standard-plugin": "^1.0.0",
     "http-server": "^0.10.0",
     "mocha": "^4.1.0",
     "mocha-testdata": "^1.2.0",
@@ -35,7 +36,6 @@
     "ts-node": "^4.1.0",
     "tslib": "^1.8.1",
     "tslint": "^5.8.0",
-    "typedoc": "^0.9.0",
     "typescript": "2.6.2",
     "uglify-loader": "^2.0.0",
     "webpack": "^3.10.0",
