--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nano-sql",
-  "version": "1.2.4",
-  "description": "Super flexible database/datastore for the client, server & mobile devices.",
+  "version": "1.2.5",
+  "description": "Universal abstraction layer for a multitude of databases. Supports SQLite, LevelDB, IndexedDB, WebSQL and more!",
   "main": "lib/index-server.js",
   "browser": "lib/index.js",
   "scripts": {
