--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nano-sql",
-  "version": "1.3.2",
-  "description": "Universal abstraction layer for a multitude of databases. Supports SQLite, LevelDB, IndexedDB, WebSQL and more!",
+  "version": "1.3.3",
+  "description": "NoSQL Everywhere",
   "main": "lib/index-server.js",
   "browser": "lib/index.js",
   "scripts": {
