--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nano-sql",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "NoSQL Everywhere",
   "main": "lib/index-server.js",
   "browser": "lib/index.js",
@@ -89,6 +89,7 @@
     "isomorphic",
     "universal",
     "trie",
+    "redis",
     "tree"
   ],
   "author": "Scott Lott <Scott@ClickSimply.com>",
