--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nano-sql",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "description": "NoSQL Everywhere",
   "main": "lib/index-server.js",
   "browser": "lib/index.js",
@@ -105,7 +105,7 @@
   "contributors": [
     {
       "name": "Jesús Ignacio Ortíz Beltrán",
-      "email": null,
+      "email": "",
       "url": "https://github.com/Jesuso",
       "contributions": 2,
       "additions": 16438,
@@ -114,7 +114,7 @@
     },
     {
       "name": "Scott Lott",
-      "email": null,
+      "email": "",
       "url": "https://github.com/ClickSimply",
       "contributions": 202,
       "additions": 304772,
@@ -123,7 +123,7 @@
     },
     {
       "name": "Vikrant Pogula",
-      "email": null,
+      "email": "",
       "url": "https://github.com/vikrantpogula",
       "contributions": 3,
       "additions": 1681,
