--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nano-sql",
-  "version": "1.3.6",
+  "version": "1.3.7",
   "description": "NoSQL Everywhere",
   "main": "lib/index-server.js",
   "browser": "lib/index.js",
@@ -18,27 +18,27 @@
   "typings": "lib/index.d.ts",
   "homepage": "https://nanosql.io/",
   "devDependencies": {
-    "@types/chai": "^4.0.10",
+    "@types/chai": "^4.1.2",
     "@types/levelup": "0.0.30",
-    "@types/mocha": "^2.2.46",
-    "@types/node": "^8.5.2",
+    "@types/mocha": "^2.2.48",
+    "@types/node": "^9.4.7",
     "@types/websql": "0.0.27",
     "chai": "^4.1.2",
     "chia": "0.0.1",
     "esdoc": "^1.0.4",
     "esdoc-standard-plugin": "^1.0.0",
-    "http-server": "^0.10.0",
-    "mocha": "^4.1.0",
+    "http-server": "^0.11.1",
+    "mocha": "^5.0.4",
     "mocha-testdata": "^1.2.0",
     "npm-run-all": "^4.1.2",
     "raw-loader": "^0.5.1",
-    "ts-loader": "^3.2.0",
-    "ts-node": "^4.1.0",
-    "tslib": "^1.8.1",
-    "tslint": "^5.8.0",
-    "typescript": "2.6.2",
+    "ts-loader": "^4.1.0",
+    "ts-node": "^5.0.1",
+    "tslib": "^1.9.0",
+    "tslint": "^5.9.1",
+    "typescript": "2.7.2",
     "uglify-loader": "^2.0.0",
-    "webpack": "^3.10.0",
+    "webpack": "^4.1.1",
     "webpack-node-externals": "^1.6.0",
     "webpack-strip-block": "^0.2.0"
   },
@@ -96,11 +96,13 @@
   "license": "MIT",
   "dependencies": {
     "int64-buffer": "^0.1.10",
-    "leveldown": "^2.1.1",
-    "levelup": "^2.0.1",
+    "leveldown": "^3.0.0",
+    "levelup": "^2.0.2",
     "lie-ts": "^3.7.0",
     "prefix-trie-ts": "0.0.3",
-    "really-small-events": "^1.1.0"
+    "really-small-events": "^1.1.0",
+    "uglify-js": "^3.3.15",
+    "webpack-cli": "^2.0.12"
   },
   "contributors": [
     {
