--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nano-sql",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "NoSQL Everywhere",
   "main": "lib/index-server.js",
   "browser": "lib/index.js",
@@ -19,16 +19,15 @@
   "homepage": "https://nanosql.io/",
   "devDependencies": {
     "@types/chai": "^4.1.2",
-    "@types/levelup": "0.0.30",
-    "@types/mocha": "^2.2.48",
-    "@types/node": "^9.4.7",
+    "@types/mocha": "^5.0.0",
+    "@types/node": "^9.6.1",
     "@types/websql": "0.0.27",
     "chai": "^4.1.2",
     "chia": "0.0.1",
     "esdoc": "^1.0.4",
     "esdoc-standard-plugin": "^1.0.0",
     "http-server": "^0.11.1",
-    "mocha": "^5.0.4",
+    "mocha": "^5.0.5",
     "mocha-testdata": "^1.2.0",
     "npm-run-all": "^4.1.2",
     "raw-loader": "^0.5.1",
@@ -36,10 +35,9 @@
     "ts-node": "^5.0.1",
     "tslib": "^1.9.0",
     "tslint": "^5.9.1",
-    "typescript": "2.7.2",
-    "uglify-loader": "^2.0.0",
-    "webpack": "^4.1.1",
-    "webpack-node-externals": "^1.6.0",
+    "typescript": "2.8.1",
+    "webpack": "^4.4.1",
+    "webpack-node-externals": "^1.7.2",
     "webpack-strip-block": "^0.2.0"
   },
   "keywords": [
@@ -99,10 +97,11 @@
     "leveldown": "^3.0.0",
     "levelup": "^2.0.2",
     "lie-ts": "^3.7.0",
-    "prefix-trie-ts": "0.0.3",
+    "prefix-trie-ts": "0.0.4",
     "really-small-events": "^1.1.0",
-    "uglify-js": "^3.3.15",
-    "webpack-cli": "^2.0.12"
+    "typedoc": "^0.11.1",
+    "uglify-js": "^3.3.17",
+    "webpack-cli": "^2.0.13"
   },
   "contributors": [
     {
