--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nano-sql",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "NoSQL Everywhere",
   "main": "lib/index-server.js",
   "browser": "lib/index.js",
@@ -22,6 +22,7 @@
     "@types/mocha": "^5.0.0",
     "@types/node": "^9.6.1",
     "@types/websql": "0.0.27",
+    "NanoSQL-Adapter-Test": "git+https://github.com/ClickSimply/NanoSQL-Adapter-Test.git",
     "chai": "^4.1.2",
     "http-server": "^0.11.1",
     "mocha": "^5.0.5",
@@ -32,13 +33,13 @@
     "ts-node": "^5.0.1",
     "tslib": "^1.9.0",
     "tslint": "^5.9.1",
-    "typescript": "2.8.1",
-    "webpack": "^4.4.1",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-strip-block": "^0.2.0",
     "typedoc": "^0.11.1",
+    "typescript": "2.8.1",
     "uglify-js": "^3.3.17",
-    "webpack-cli": "^2.0.13"
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13",
+    "webpack-node-externals": "^1.7.2",
+    "webpack-strip-block": "^0.2.0"
   },
   "keywords": [
     "database",
@@ -97,6 +98,7 @@
     "int64-buffer": "^0.1.10",
     "leveldown": "^3.0.0",
     "levelup": "^2.0.2",
+    "levenshtein-edit-distance": "^2.0.2",
     "lie-ts": "^3.8.0",
     "metaphone": "^1.0.3",
     "prefix-trie-ts": "0.0.4",
