--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "nano-sql",
-  "version": "1.5.7",
+  "version": "1.5.8",
   "description": "NoSQL Everywhere",
   "main": "lib/index-server.js",
   "browser": "lib/index.js",
   "scripts": {
-    "serve": "npm-run-all --parallel worker-watch main-watch",
-    "main-watch": "webpack-dev-server",
-    "worker-watch": "./node_modules/.bin/tsc --removeComments -t \"ES5\" --watch  --out \"./src/database/adapter-indexedDB-worker.txt\" ./src/database/adapter-indexedDB-worker.ts",
+    "serve": "webpack-dev-server",
     "build": "bash bin/build.sh",
     "test": "mocha -r ts-node/register tests/index.ts"
   },
@@ -27,7 +25,6 @@
     "http-server": "^0.11.1",
     "mocha": "^5.0.5",
     "mocha-testdata": "^1.2.0",
-    "npm-run-all": "^4.1.2",
     "raw-loader": "^0.5.1",
     "ts-loader": "^4.1.0",
     "ts-node": "^5.0.1",
