--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.2",
     "@types/mocha": "^5.0.0",
-    "@types/node": "^9.6.1",
+    "@types/node": "^10.1.2",
     "@types/websql": "0.0.27",
     "NanoSQL-Adapter-Test": "git+https://github.com/ClickSimply/NanoSQL-Adapter-Test.git",
     "chai": "^4.1.2",
@@ -27,11 +27,11 @@
     "mocha-testdata": "^1.2.0",
     "raw-loader": "^0.5.1",
     "ts-loader": "^4.1.0",
-    "ts-node": "^5.0.1",
+    "ts-node": "^6.0.3",
     "tslib": "^1.9.0",
     "tslint": "^5.9.1",
     "typedoc": "^0.11.1",
-    "typescript": "2.8.1",
+    "typescript": "2.8.3",
     "uglify-js": "^3.3.17",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
@@ -86,19 +86,26 @@
     "universal",
     "trie",
     "redis",
-    "tree"
+    "tree",
+    "database",
+    "nosql",
+    "rxjs",
+    "pwa",
+    "rx",
+    "fuzzy"
   ],
   "author": "Scott Lott <Scott@ClickSimply.com>",
   "license": "MIT",
   "dependencies": {
     "fuzzysearch": "^1.0.3",
     "int64-buffer": "^0.1.10",
-    "leveldown": "^3.0.0",
+    "leveldown": "^4.0.0",
     "levelup": "^2.0.2",
     "levenshtein-edit-distance": "^2.0.2",
-    "lie-ts": "^3.8.0",
+    "lie-ts": "^3.9.0",
     "metaphone": "^1.0.3",
     "prefix-trie-ts": "0.0.4",
+    "queue": "^4.4.2",
     "really-small-events": "^1.1.0",
     "stemmer": "^1.0.2"
   },
