updated other projects

--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,7 @@
-logo.png
-logo_full.png
-examples
-webpack.config.js
-tslint.json
-tsconfig.json
-quick-demo.gif
-newREADME.md
-tests
-docs
-packages
-CHANGELOG.md
-contributors.md
-.gitattributes
-.vs
-bin
+/*
+
+!/src/
+!/bin/
+!/LICENSE
+!/package.json
+!/README.md
