--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
 	"main": "lib/index-server.js",
 	"browser": "lib/index.js",
 	"scripts": {
+		"dist": "npm-run-all lint test build",
 		"serve": "webpack-dev-server",
 		"build": "bash bin/build.sh",
-		"test": "mocha -r ts-node/register tests/index.ts"
+		"test": "mocha -r ts-node/register tests/index.ts",
+		"lint": "tslint -p ./tsconfig.json \"./src/**/*.ts\""
 	},
 	"repository": {
 		"type": "git",
@@ -102,6 +104,7 @@
 		"levenshtein-edit-distance": "^2.0.2",
 		"lie-ts": "^4.0.0",
 		"metaphone": "^1.0.3",
+		"npm-run-all": "4.1.3",
 		"prefix-trie-ts": "0.0.4",
 		"queue": "^4.4.2",
 		"really-small-events": "^1.1.0",
@@ -112,7 +115,8 @@
 		"levelup": "^2.0.2",
 		"int64-buffer": "^0.1.10"
 	},
-	"contributors": [{
+	"contributors": [
+		{
 			"name": "Scott Lott",
 			"email": null,
 			"url": "https://github.com/ClickSimply",
