--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "nano-sql",
-	"version": "1.7.1",
+	"version": "1.7.2",
 	"description": "NoSQL Everywhere",
 	"main": "lib/index-server.js",
 	"browser": "lib/index.js",
 	"scripts": {
 		"dist": "npm-run-all lint test build",
-		"serve": "webpack-dev-server",
+		"serve": "webpack-dev-server --mode=development",
 		"build": "bash bin/build.sh",
 		"test": "mocha -r ts-node/register tests/index.ts",
 		"lint": "tslint -p ./tsconfig.json \"./src/**/*.ts\""
@@ -25,6 +25,7 @@
 		"NanoSQL-Adapter-Test": "git+https://github.com/ClickSimply/NanoSQL-Adapter-Test.git",
 		"chai": "^4.1.2",
 		"http-server": "^0.11.1",
+		"lerna": "2.11.0",
 		"mocha": "^5.2.0",
 		"mocha-testdata": "^1.2.0",
 		"raw-loader": "^0.5.1",
@@ -38,8 +39,7 @@
 		"webpack": "^4.16.1",
 		"webpack-cli": "^3.1.0",
 		"webpack-node-externals": "^1.7.2",
-		"webpack-strip-block": "^0.2.0",
-		"lerna": "2.11.0"
+		"webpack-strip-block": "^0.2.0"
 	},
 	"keywords": [
 		"database",
@@ -102,7 +102,7 @@
 	"dependencies": {
 		"fuzzysearch": "^1.0.3",
 		"levenshtein-edit-distance": "^2.0.2",
-		"lie-ts": "^4.0.0",
+		"lie-ts": "^4.2.0",
 		"metaphone": "^1.0.3",
 		"npm-run-all": "4.1.3",
 		"prefix-trie-ts": "0.0.4",
