--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"lerna": "2.11.0",
 		"mocha": "^5.2.0",
 		"mocha-testdata": "^1.2.0",
+		"npm-run-all": "^4.1.3",
 		"raw-loader": "^0.5.1",
 		"ts-loader": "^4.4.2",
 		"ts-node": "^7.0.0",
@@ -104,7 +105,6 @@
 		"levenshtein-edit-distance": "^2.0.2",
 		"lie-ts": "^4.2.0",
 		"metaphone": "^1.0.3",
-		"npm-run-all": "4.1.3",
 		"prefix-trie-ts": "0.0.4",
 		"queue": "^4.4.2",
 		"really-small-events": "^1.1.0",
