--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
 		"prefix-trie-ts": "0.0.4",
 		"queue": "^4.4.2",
 		"really-small-events": "^1.1.0",
+		"sequential-task-queue": "^1.2.1",
 		"stemmer": "^1.0.2"
 	},
 	"optionalDependencies": {
