--- a/packages/Core/package.json
+++ b/packages/Core/package.json
@@ -2,10 +2,11 @@
 	"name": "nano-sql",
 	"version": "1.7.6",
 	"description": "NoSQL Everywhere",
-	"main": "lib/index-server.js",
+	"main": "lib/index-node.js",
 	"browser": "lib/index.js",
 	"scripts": {
 		"dist": "npm-run-all lint test build",
+		"build2": "rollup -c",
 		"serve": "webpack-dev-server --mode=development",
 		"build": "bash bin/build.sh",
 		"test": "mocha -r ts-node/register tests/index.ts",
@@ -30,17 +31,22 @@
 		"mocha-testdata": "^1.2.0",
 		"npm-run-all": "^4.1.3",
 		"raw-loader": "^0.5.1",
+		"rollup": "^0.66.6",
+		"rollup-plugin-commonjs": "^9.2.0",
+		"rollup-plugin-replace": "^2.1.0",
+		"rollup-plugin-typescript": "^1.0.0",
 		"ts-loader": "^4.4.2",
 		"ts-node": "^7.0.0",
 		"tslib": "^1.9.3",
 		"tslint": "^5.11.0",
 		"typedoc": "^0.11.1",
-		"typescript": "2.9.2",
+		"typescript": "^2.9.2",
 		"uglify-js": "^3.4.5",
 		"webpack": "^4.16.1",
 		"webpack-cli": "^3.1.0",
 		"webpack-node-externals": "^1.7.2",
-		"webpack-strip-block": "^0.2.0"
+		"webpack-strip-block": "^0.2.0",
+		"rollup-plugin-uglify": "^6.0.0"
 	},
 	"keywords": [
 		"database",
@@ -101,15 +107,9 @@
 	"author": "Scott Lott <Scott@ClickSimply.com>",
 	"license": "MIT",
 	"dependencies": {
-		"fuzzysearch": "^1.0.3",
+		"async-limiter": "^1.0.0",
 		"levenshtein-edit-distance": "^2.0.2",
-		"lie-ts": "^4.2.0",
-		"metaphone": "^1.0.3",
-		"prefix-trie-ts": "0.0.4",
-		"queue": "^4.4.2",
-		"really-small-events": "^1.1.0",
-		"sequential-task-queue": "^1.2.1",
-		"stemmer": "^1.0.2"
+		"really-small-events": "^1.1.0"
 	},
 	"optionalDependencies": {
 		"leveldown": "^4.0.0",
