--- a/packages/Core/package.json
+++ b/packages/Core/package.json
@@ -6,9 +6,9 @@
 	"browser": "lib/index.js",
 	"scripts": {
 		"dist": "npm-run-all lint test build",
-		"build2": "rollup -c",
+		"rollup-test": "rollup -c",
 		"serve": "webpack-dev-server --mode=development",
-		"build": "bash bin/build.sh",
+		"build": "bash build.sh",
 		"test": "mocha -r ts-node/register tests/index.ts",
 		"lint": "tslint -p ./tsconfig.json \"./src/**/*.ts\""
 	},
@@ -35,6 +35,7 @@
 		"rollup-plugin-commonjs": "^9.2.0",
 		"rollup-plugin-replace": "^2.1.0",
 		"rollup-plugin-typescript": "^1.0.0",
+		"rollup-plugin-uglify": "^6.0.0",
 		"ts-loader": "^4.4.2",
 		"ts-node": "^7.0.0",
 		"tslib": "^1.9.3",
@@ -42,11 +43,10 @@
 		"typedoc": "^0.11.1",
 		"typescript": "^2.9.2",
 		"uglify-js": "^3.4.5",
-		"webpack": "^4.16.1",
+		"webpack": "^4.23.0",
 		"webpack-cli": "^3.1.0",
 		"webpack-node-externals": "^1.7.2",
-		"webpack-strip-block": "^0.2.0",
-		"rollup-plugin-uglify": "^6.0.0"
+		"webpack-strip-block": "^0.2.0"
 	},
 	"keywords": [
 		"database",
