--- a/packages/Core/package.json
+++ b/packages/Core/package.json
@@ -19,11 +19,10 @@
 	"typings": "lib/index.d.ts",
 	"homepage": "https://nanosql.io/",
 	"devDependencies": {
-		"@types/chai": "^4.1.4",
+		"@types/chai": "^4.1.7",
 		"@types/mocha": "^5.2.5",
 		"@types/node": "^10.5.2",
 		"@types/websql": "0.0.27",
-		"NanoSQL-Adapter-Test": "git+https://github.com/ClickSimply/NanoSQL-Adapter-Test.git",
 		"chai": "^4.1.2",
 		"http-server": "^0.11.1",
 		"lerna": "2.11.0",
@@ -36,6 +35,7 @@
 		"rollup-plugin-replace": "^2.1.0",
 		"rollup-plugin-typescript": "^1.0.0",
 		"rollup-plugin-uglify": "^6.0.0",
+		"sql.js": "^0.5.0",
 		"ts-loader": "^4.4.2",
 		"ts-node": "^7.0.0",
 		"tslib": "^1.9.3",
@@ -43,7 +43,7 @@
 		"typedoc": "^0.11.1",
 		"typescript": "^2.9.2",
 		"uglify-js": "^3.4.5",
-		"webpack": "^4.23.0",
+		"webpack": "^4.23.1",
 		"webpack-cli": "^3.1.0",
 		"webpack-node-externals": "^1.7.2",
 		"webpack-strip-block": "^0.2.0"
@@ -107,7 +107,6 @@
 	"author": "Scott Lott <Scott@ClickSimply.com>",
 	"license": "MIT",
 	"dependencies": {
-		"async-limiter": "^1.0.0",
 		"levenshtein-edit-distance": "^2.0.2",
 		"really-small-events": "^1.1.0"
 	},
