--- a/packages/Core/package.json
+++ b/packages/Core/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "nano-sql",
-	"version": "1.7.6",
+	"name": "@nano-sql/core",
+	"version": "2.0.0-rc2",
 	"description": "NoSQL Everywhere",
 	"main": "lib/index-node.js",
 	"browser": "lib/index.js",
