--- a/packages/Core/package.json
+++ b/packages/Core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nano-sql/core",
-	"version": "2.0.7",
+	"version": "2.0.8",
 	"description": "Like Lego For Databases",
 	"main": "lib/index-node.js",
 	"browser": "lib/index.js",
@@ -11,8 +11,7 @@
 		"bundle": "cross-env NODE_ENV=production webpack -p --display-modules",
 		"release": "bash release.sh",
 		"test": "mocha -r ts-node/register tests/index.ts",
-		"lint": "tslint -p ./tsconfig.json \"./src/**/*.ts\"",
-		"build-cli": "tsc -p 'tsconfig.cli.json'"
+		"lint": "tslint -p ./tsconfig.json \"./src/**/*.ts\""
 	},
 	"repository": {
 		"type": "git",
@@ -142,6 +141,6 @@
 		}
 	],
 	"bin": {
-		"nsql": "./dist/cli.js"
+		"nsql": "./lib/cli.js"
 	}
 }
