--- a/packages/Plugin-Net-Server/package.json
+++ b/packages/Plugin-Net-Server/package.json
@@ -22,17 +22,13 @@
   "license": "MIT",
   "dependencies": {
     "@clusterws/cws": "^0.11.0",
-    "@nano-sql/core": "^2.0.9",
+    "@nano-sql/core": "^2.1.1",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.16.0",
     "bcrypt": "^3.0.3",
     "express": "^4.16.4",
     "level-rocksdb": "^3.0.1",
-    "redis": "^2.8.0",
-    "unix-dgram": "^2.0.2"
-  },
-  "peerDependencies": {
-    "@nano-sql/core": "^2.0.9"
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "@types/node": "^10.12.18",
