--- a/packages/Core/package.json
+++ b/packages/Core/package.json
@@ -25,6 +25,7 @@
 		"@types/node": "^10.12.18",
 		"@types/websql": "0.0.27",
 		"chai": "^4.1.2",
+		"colors": "^1.3.3",
 		"cross-env": "^5.2.0",
 		"json2csv": "^4.3.1",
 		"lerna": "2.11.0",
