--- a/packages/Adapter-SQLite-Cordova/plugin.xml
+++ b/packages/Adapter-SQLite-Cordova/plugin.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="adapter-sqlite-cordova" version="2.0.5">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="adapter-sqlite-cordova" version="2.0.6">
     <name>NanoSQL 2 Cordova Plugin</name>
-    <description>Switch between IndexedDB/WebSQL for browser testing and full on device SQLite database with zero effort.</description>
+    <description>Switch between IndexedDB/WebSQL for browser testing and SQLite on device with zero effort.</description>
     <license>MIT</license>
     <keywords>database, json, collection, records, node, nodejs, sql, orm, nosql, DBMS, data, query, SQLite, JSON, CSV, persistent, immutable, undo, redo, immutablejs, sorting, filtering, filter, sort, somesql, nanosql, levelDB, leveldb, indexeddb, level DB, Indexed DB, trie, tree</keywords>
     <dependency id="cordova-sqlite-storage" version="2.6.0" />
     <dependency id="cordova-plugin-device" version="2.0.2" />
-    <js-module src="dist/sqlite.js" name="nanoSQLPlugin">
-        <clobbers target="nanoSQLPlugin" />
+    <js-module src="dist/sqlite.js" name="nSQLadapter">
+        <clobbers target="nSQLadapter" />
     </js-module>
 </plugin>
