--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "typedoc": "^0.14.2",
-    "typescript": "^3.4.1"
+    "typescript": "^3.4.1",
+    "webpack-dev-middleware": "^3.6.0"
   }
 }
