--- a/packages/Core/package.json
+++ b/packages/Core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nano-sql/core",
-	"version": "2.2.5",
+	"version": "2.2.6",
 	"description": "Like Lego For Databases",
 	"main": "lib/index-node.js",
 	"browser": "lib/index.js",
@@ -28,8 +28,8 @@
 		"colors": "^1.3.3",
 		"cross-env": "^5.2.0",
 		"json2csv": "^4.4.1",
-		"lerna": "3.13.2",
-		"mocha": "^6.1.3",
+		"lerna": "^3.13.3",
+		"mocha": "^6.1.4",
 		"mocha-testdata": "^1.2.0",
 		"npm-run-all": "^4.1.5",
 		"papaparse": "^4.6.3",
@@ -52,6 +52,7 @@
 		"uglifyjs-webpack-plugin": "^2.1.2",
 		"webpack": "^4.30.0",
 		"webpack-cli": "^3.3.0",
+		"webpack-dev-server": "^3.3.1",
 		"webpack-node-externals": "^1.7.2"
 	},
 	"keywords": [
