--- a/packages/Core/package.json
+++ b/packages/Core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nano-sql/core",
-	"version": "2.2.8",
+	"version": "2.2.9",
 	"description": "Like Lego For Databases",
 	"main": "lib/index-node.js",
 	"browser": "lib/index.js",
@@ -22,38 +22,29 @@
 	"devDependencies": {
 		"@types/chai": "^4.1.7",
 		"@types/mocha": "^5.2.6",
-		"@types/node": "^11.13.4",
+		"@types/node": "^12.0.0",
 		"@types/websql": "0.0.27",
 		"chai": "^4.2.0",
 		"colors": "^1.3.3",
-		"cross-env": "^5.2.0",
-		"json2csv": "^4.4.1",
-		"lerna": "^3.13.3",
+		"json2csv": "^4.5.1",
 		"mocha": "^6.1.4",
-		"mocha-testdata": "^1.2.0",
 		"npm-run-all": "^4.1.5",
 		"papaparse": "^4.6.3",
-		"puppeteer": "^1.14.0",
-		"raw-loader": "^2.0.0",
-		"rollup": "^1.10.0",
+		"puppeteer": "^1.15.0",
+		"rollup": "^1.11.0",
 		"rollup-plugin-commonjs": "^9.3.4",
 		"rollup-plugin-replace": "^2.2.0",
 		"rollup-plugin-typescript": "^1.0.1",
 		"rollup-plugin-uglify": "^6.0.2",
 		"sqlite3": "^4.0.6",
 		"stoppable": "^1.1.0",
-		"ts-loader": "^5.3.3",
-		"ts-node": "^8.1.0",
-		"tslib": "^1.9.3",
-		"tslint": "^5.15.0",
-		"typedoc": "^0.14.2",
-		"typescript": "^3.4.3",
-		"uglify-js": "^3.5.4",
+		"ts-loader": "^5.4.5",
+		"tslint": "^5.16.0",
+		"typescript": "^3.4.5",
 		"uglifyjs-webpack-plugin": "^2.1.2",
 		"webpack": "^4.30.0",
-		"webpack-cli": "^3.3.0",
-		"webpack-dev-server": "^3.3.1",
-		"webpack-node-externals": "^1.7.2"
+		"webpack-cli": "^3.3.1",
+		"webpack-dev-server": "^3.3.1"
 	},
 	"keywords": [
 		"database",
@@ -122,12 +113,12 @@
 	},
 	"optionalDependencies": {
 		"chalk": "^2.4.2",
-		"chokidar": "^2.1.5",
+		"chokidar": "^3.0.0",
 		"command-line-args": "^5.1.1",
 		"encoding-down": "^6.0.2",
 		"levelup": "^4.0.1",
 		"lexicographic-integer-encoding": "^1.0.1",
-		"rocksdb": "^3.0.3"
+		"rocksdb": "^3.1.0"
 	},
 	"contributors": [
 		{
