--- a/packages/Adapter-SQLite-NativeScript/package.json
+++ b/packages/Adapter-SQLite-NativeScript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nano-sql/adapter-sqlite-nativescript",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Easily Run SQLite in NativeScript with nanoSQL 2!",
   "main": "lib/index.js",
   "scripts": {
@@ -43,13 +43,10 @@
     }
   },
   "dependencies": {
-    "nativescript-sqlite": "^2.3.2"
-  },
-  "peerDependencies": {
-    "@nano-sql/core": "^2.2.4"
+    "nativescript-sqlite": "^2.3.2",
+    "@nano-sql/core": "^2.3.1"
   },
   "devDependencies": {
-    "@nano-sql/core": "^2.2.4",
     "@types/node": "^10.12.23",
     "typescript": "^3.3.3"
   }
