--- a/packages/Core/tsconfig.json
+++ b/packages/Core/tsconfig.json
@@ -14,7 +14,7 @@
         "lib": ["dom", "es2015", "es5"]
     },
     "include": [
-        "src/*"
+        "src/**/*"
     ],
     "exclude": [
         "node_modules"
