--- a/packages/Core/package.json
+++ b/packages/Core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nano-sql/core",
-	"version": "2.3.4",
+	"version": "2.3.5",
 	"description": "Like Lego For Databases",
 	"main": "lib/index-node.js",
 	"browser": "lib/index.js",
@@ -10,7 +10,7 @@
 		"serve": "webpack-dev-server --mode=development",
 		"serve-link": "tsc -w --stripInternal -d --moduleResolution \"node\" -t \"es5\" --rootDir  \"./src\" --module \"commonjs\" --outDir \"./lib\"",
 		"bundle": "webpack -p --display-modules && webpack -p --es5 --display-modules",
-		"release": "npm run test && bash release.sh",
+		"release": "bash release.sh",
 		"test": "mocha -r ts-node/register tests/index.ts",
 		"lint": "tslint -p ./tsconfig.json \"./src/**/*.ts\""
 	},
