query engine rewrite progress

--- a/packages/Core/package.json
+++ b/packages/Core/package.json
@@ -12,6 +12,7 @@
 		"bundle": "webpack -p --display-modules && webpack -p --es5 --display-modules",
 		"release": "bash release.sh",
 		"test": "mocha -r ts-node/register tests/index.ts",
+		"unit-test": "mocha -r ts-node/register tests/06-query2.ts",
 		"lint": "tslint -p ./tsconfig.json \"./src/**/*.ts\""
 	},
 	"repository": {
